<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="gmsuite.program.weathergenerator.Profile_Selection" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="180dp"
        android:gravity="center_horizontal"
        android:text="@string/Intro_Text"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:text="@string/Select_Prompt"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="20sp"
        android:visibility="gone" />

    <Button
        android:id="@+id/newProfile"
        android:layout_width="181dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:onClick="newPress"
        android:text="@string/New_Profile" />

    <ListView
        android:id="@+id/profileSelect"
        android:layout_width="match_parent"
        android:layout_height="333dp"
        android:visibility="gone" >

    </ListView>

    <Button
        android:id="@+id/loadProfile"
        android:layout_width="181dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="25dp"
        android:onClick="loadPress"
        android:text="@string/Load_Profile" />

    <Button
        android:id="@+id/exit1"
        android:layout_width="181dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="25dp"
        android:onClick="exitPress"
        android:text="@string/Exit" />

    <Button
        android:id="@+id/back"
        android:layout_width="181dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:onClick="backPress"
        android:text="@string/Back"
        android:visibility="gone" />

</LinearLayout>