<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android1="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="7"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:rowCount="6"
    tools:context="gmsuite.program.weathergenerator.Generator" >

    <TextView
        android:id="@+id/dateInfo"
        android:layout_column="0"
        android:layout_columnSpan="6"
        android:layout_gravity="center_horizontal"
        android:layout_row="0"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <RadioGroup
        android:id="@+id/radioGroup1"
        android1:layout_width="382dp"
        android1:layout_height="52dp"
        android:layout_column="0"
        android:layout_columnSpan="4"
        android:layout_gravity="start|top"
        android:layout_row="1"
        android1:layout_marginTop="15dp"
        android:orientation="horizontal" >

        <RadioButton
            android1:id="@+id/radHour"
            android1:layout_width="wrap_content"
            android1:layout_height="match_parent"
            android1:checked="true"
            android1:text="@string/By_Hour" />

        <RadioButton
            android1:id="@+id/radDay"
            android1:layout_width="wrap_content"
            android1:layout_height="wrap_content"
            android1:text="@string/By_Day" />

        <RadioButton
            android1:id="@+id/radWeek"
            android1:layout_width="wrap_content"
            android1:layout_height="wrap_content"
            android1:text="@string/By_Week" />

        <RadioButton
            android1:id="@+id/radMonth"
            android1:layout_width="wrap_content"
            android1:layout_height="wrap_content"
            android1:text="@string/By_Month" />

    </RadioGroup>

    <!-- BUTTONS FOR CHANGING SEASON AND BIOMES-->
    <Button
        android1:id="@+id/changeSeason"
        android1:layout_width="185dp"
        android1:layout_height="38dp"
        android:layout_columnSpan="2"
        android1:layout_column="5"
        android1:layout_gravity="fill_horizontal"
        android1:layout_marginTop="15dp"
        android1:layout_row="1"
        android:textAlignment="gravity"
        android1:text="@string/Change_Season" />

    <Button
        android1:id="@+id/changeBiome"
        android1:layout_width="185dp"
        android1:layout_height="38dp"
        android:layout_columnSpan="2"
        android1:layout_column="5"
        android1:layout_gravity="fill_horizontal"
        android1:layout_marginTop="48dp"
        android1:layout_row="1"
        android:textAlignment="gravity"
        android1:text="@string/Change_Biome" />

    <Spinner
        android1:id="@+id/SeasonselectionSpinner"
        android1:layout_width="187dp"
        android:layout_columnSpan="2"
        android1:layout_column="5"
        android1:layout_gravity="start|top"
        android1:layout_marginTop="15dp"
        android1:layout_row="1"
        android1:visibility="gone" />
    
    <Spinner
        android1:id="@+id/BiomeselectionSpinner"
        android1:layout_width="187dp"
        android:layout_columnSpan="2"
        android1:layout_column="5"
        android1:layout_gravity="start|top"
        android1:layout_marginTop="15dp"
        android1:layout_row="1"
        android1:visibility="gone" />

    <!-- BUTTONS FOR ADVANCING GENERATOR -->

    <Button
        android1:id="@+id/Intesify"
        android1:layout_width="150dp"
        android:layout_columnSpan="2"
        android1:layout_column="1"
        android1:layout_gravity="start|top"
        android1:layout_marginTop="20dp"
        android1:layout_row="2"
        android1:text="@string/Intensify" />

    <Button
        android1:id="@+id/Detensify"
        android1:layout_width="150dp"
        android:layout_columnSpan="2"
        android1:layout_column="3"
        android1:layout_gravity="start|top"
        android1:layout_marginStart="40dp"
        android1:layout_marginTop="20dp"
        android1:layout_row="2"
        android1:text="@string/Detensify" />

    <Button
        android1:id="@+id/Random"
        android1:layout_width="150dp"
        android:layout_columnSpan="2"
        android1:layout_column="5"
        android1:layout_gravity="start|top"
        android1:layout_marginTop="20dp"
        android1:layout_row="2"
        android1:text="@string/Random" />

    <TextView
        android1:id="@+id/EffectsHeader"
        android:layout_columnSpan="4"
        android1:layout_column="3"
        android1:layout_gravity="start|top"
        android1:layout_marginStart="150dp"
        android1:layout_marginTop="40dp"
        android1:layout_row="3"
        android1:text="@string/Value_Effects"
        android1:textAppearance="?android:attr/textAppearanceMedium"
        android1:textSize="30sp" />

    <TextView
        android1:id="@+id/DiscriptionHeader"
        android:layout_columnSpan="4"
        android1:layout_column="0"
        android1:layout_gravity="start|top"
        android1:layout_marginStart="50dp"
        android1:layout_marginTop="40dp"
        android1:layout_row="3"
        android1:text="@string/Value_Description"
        android1:textAppearance="?android:attr/textAppearanceMedium"
        android1:textSize="30sp" />

    <TextView
        android1:id="@+id/discriptVis"
        android:layout_columnSpan="2"
        android1:layout_column="2"
        android1:layout_gravity="start|top"
        android1:layout_marginStart="55dp"
        android1:layout_marginTop="30dp"
        android1:layout_row="4"
        android1:maxHeight="400dp"
        android1:maxWidth="200dp"
        android1:minHeight="400dp"
        android1:minWidth="200dp"
        android1:text=""
        android1:textSize="17sp" />

    <TextView
        android1:id="@+id/effectsVis"
        android1:layout_height="402dp"
        android:layout_columnSpan="4"
        android1:layout_column="3"
        android1:layout_gravity="start|top"
        android1:layout_marginStart="155dp"
        android1:layout_marginTop="30dp"
        android1:layout_row="4"
        android1:maxHeight="400dp"
        android1:maxWidth="250dp"
        android1:minHeight="400dp"
        android1:minWidth="250dp"
        android1:text=""
        android1:textSize="17sp" />

    <Button
        android1:id="@+id/SavenExit"
        android1:layout_width="195dp"
        android1:layout_column="3"
        android1:layout_gravity="end|bottom"
        android1:layout_row="5"
        android1:text="@string/Done" />

</GridLayout>